2020-04-29 Jan Kotanski <jankotan@gmail.com>
	* add order to output of nxsconfig info -r
	* remove -d from nxsconfig geometry
	* tagged as v2.71.1

2020-04-22 Jan Kotanski <jankotan@gmail.com>
	* remove -nonewlines from nxsconfig info|geometry|describe
	* improve output of nxsconfig info -r
	* tagged as v2.71.0

2020-04-16 Jan Kotanski <jankotan@gmail.com>
	* add tests nxsconfig servers
	* tagged as v2.70.3

2020-04-07 Jan Kotanski <jankotan@gmail.com>
	* impove catching execptions for py3
	* tagged as v2.70.2

2020-03-07 Jan Kotanski <jankotan@gmail.com>
	* add comments for help examples of nxscreate sub-command
	* tagged as v2.70.1

2020-03-03 Jan Kotanski <jankotan@gmail.com>
	* add -m option to nxsconfig upload
	* tagged as v2.70.0

2020-02-07 Jan Kotanski <jankotan@gmail.com>
	* add fieldname for other template components
	* tagged as v2.69.4

2020-02-06 Jan Kotanski <jankotan@gmail.com>
	* fix for msnsar template component
	* tagged as v2.69.3

2019-10-17 Jan Kotanski <jankotan@gmail.com>
	* add collect4 collect5 collect6
	* tagged as v2.69.2

2019-10-17 Jan Kotanski <jankotan@gmail.com>
	* add fieldname parameters for beamstop and pinhole
	* tagged as v2.69.1

2019-10-15 Jan Kotanski <jankotan@gmail.com>
	* add support for MacroServer environment datasources
	* tagged as v2.69.0

2019-10-10 Jan Kotanski <jankotan@gmail.com>
	* add support for pip
	* switch to setuptools
	* tagged as v2.68.1

2019-09-24 Jan Kotanski <jankotan@gmail.com>
	* add nxsconfig upload command for loading elements from files
	* add nxsconfig show -o command option saving elements to files
	* tagged as v2.68.0

2019-09-24 Jan Kotanski <jankotan@gmail.com>
	* improve support for a no-tango mode
	* tagged as v2.67.1

2019-09-05 Jan Kotanski <jankotan@gmail.com>
	* add external filters
	* add list delete info show commands for profile
	* tagged as v2.67.0

2019-08-22 Jan Kotanski <jankotan@gmail.com>
	* fix for getting datasources in nxsparser
	* tagged as v2.66.3
