@@ -6,7 +6,7 @@
         <field type="NX_FLOAT64" units="mm" name="diameter">
 	  <strategy mode="INIT"/>$datasources.$(diameter)
         </field>
-        <field type="NX_CHAR" name="depends_on">transformations/y<strategy mode="INIT"/>
+        <field type="NX_CHAR" name="depends_on">transformations/$(yname)<strategy mode="INIT"/>
         </field>
         <group type="NXtransformations" name="transformations">
           <field depends_on="$(xname)" units="mm" type="NX_FLOAT64" name="$(yname)">
