@@ -26,28 +26,28 @@
 	<field units="mm" type="NX_FLOAT" name="left">
 	  <strategy mode="INIT"/>$datasources.$(left)</field>
         <group type="NXtransformations" name="transformations">
-          <field dependson="$(xoffdependson)" units="mm" type="NX_FLOAT" name="$(xoffsetname)">
+          <field dependson="$(xoffdependson)" units="mm" type="NX_FLOAT" name="$(xoffsetname)" transformation_type="translation">
             <attribute type="NX_FLOAT64" name="vector">1 0 0<dimensions rank="1">
                 <dim value="3" index="1"/>
               </dimensions>
               <strategy mode="INIT"/>
             </attribute>
             <strategy mode="INIT"/>$datasources.$(xoffset)</field>
-          <field dependson="$(yoffdependson)" units="mm" type="NX_FLOAT" name="$(yoffsetname)">
+          <field dependson="$(yoffdependson)" units="mm" type="NX_FLOAT" name="$(yoffsetname)" transformation_type="translation">
             <attribute type="NX_FLOAT64" name="vector">0 1 0<dimensions rank="1">
                 <dim value="3" index="1"/>
               </dimensions>
               <strategy mode="INIT"/>
             </attribute>
             <strategy mode="INIT"/>$datasources.$(yoffset)</field>
-          <field  dependson="$(yoffsetcalibrationname)" units="mm" type="NX_FLOAT" name="$(xoffsetcalibrationname)">
+          <field  dependson="$(yoffsetcalibrationname)" units="mm" type="NX_FLOAT" name="$(xoffsetcalibrationname)" transformation_type="translation">
             <attribute type="NX_FLOAT64" name="vector">1 0 0<dimensions rank="1">
                 <dim value="3" index="1"/>
               </dimensions>
               <strategy mode="INIT"/>
             </attribute>
             <strategy mode="INIT"/>$datasources.$(xoffsetcalibration)</field>
-          <field  dependson="$(yoffdependson)" units="mm" type="NX_FLOAT" name="$(yoffsetcalibrationname)">
+          <field  dependson="$(yoffdependson)" units="mm" type="NX_FLOAT" name="$(yoffsetcalibrationname)" transformation_type="translation">
             <attribute type="NX_FLOAT64" name="vector">0 1 0<dimensions rank="1">
                 <dim value="3" index="1"/>
               </dimensions>
